
4.1.2 - ie refresh in progress

* ls_dir now only shows neccesary headers + massive cleanup

* fixname::fix - most subs can be sent a flag to enable STRING mode (dont do file detection)
  large overhaul - likely breaks namefix-cli.pl atm
  if fixname is passed an undefined file - quit out
  if fixname is file eq '' and mode eq FILE - quit out

* main::quit
  todo: add to namefix-cli as it quits differently depending on mode.
  clucks backtrace and prints quit message - so useful for debugging

* mp3.pm
  quit out if a tag is undefined





* get_tags should no longer return undef tags

* massive overhaul of nf_print::p
  only shows files & dirs
  code is much much cleaner
  likely broke several things buuut listing and previews work correctly again

* print command tidyup. nf_print::p is being overhauled for files and directories only
* all other printing will be done to the new console on gui. cli does not change

* drastic overhaul of mp3 library.
  updated to use new methods of writing tags, as my old method is now depreciated
  new methods enabled writing to ogg files and other audio formats.
  information for mp3 (audio files) tags are stored in a hash whenever possible

* id3v1 tags no longer supported (what is this the 90's ?)
  id3v1 tags are read only, removed and upgraded to id3v2 at every chance
  large update for get_tags
  rm_tags now removed both id3v1 and id3v2

* removed $tmp var from fixname. now using local flag $PRINT

* id3 tags supported on the following file types: mp3, mp2, ogg, mpg, mpeg, mp4, aiff, flac, ape, ram, mpc
  WIP - currently ogg's dont get their id3 tags written

* make_test_dir.pl updated. now sets mimetypes for music files (allows testing of mp3 tags)

* rc_menu
  delete can now delete a directory - shows dir contents in dialog

* config
  slowly moving all config to a hash which is stored as a tsv
  all configurable options shifted to TSV $HOME/.namefix.pl/config_hash.tsv

* filter regex
  now users quotemeta